--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,22 @@
-<html>
+ <html>
     <head>
         <title>el titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo atractivo e 
+                    iteresante del post</h1>
+                <p>
+                    Y este es el parrafo de inicio 
+                    donde camos explicar las cosas 
+                    increibles que se pueden
+                    hacer con ramas
+                </p>
+
+            </div>
+
+        </div>
     </body>
 </html>
