--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,12 @@
                     increibles que se pueden
                     hacer con ramas
                 </p>
+                <p>
+                    Los blogs son la mejor forma de compartir
+                    informacion y tus ideas.
+                    Mucho mas que ir a confderencias o salir en Youtube.
+                    Excepto si eres un richstar. Pero estadisticamente no lo eres ......por ahora.
+                </p>
 
             </div>
 
