--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e 
-                    iteresante del post</h1>
+                    interesante del post</h1>
                 <p>
                     Y este es el parrafo de inicio 
                     donde camos explicar las cosas 
