--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
 
             </div>
             <div id="post">
@@ -25,6 +25,7 @@
                     Mucho mas que ir a confderencias o salir en Youtube.
                     Excepto si eres un richstar. Pero estadisticamente no lo eres ......por ahora.
                 </p>
+                <p>Suscribete y dale like</p>
 
             </div>
 
